--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "homepage": "https://github.com/naccaratocarolina/autenticacao_nodejs#readme",
   "dependencies": {
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
